--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@craco/craco": "^6.4.3",
     "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.19",
     "typescript": "^4.5.4"
   }
