--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@craco/craco": "^6.4.3",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.19",
     "typescript": "^4.5.4"
   }
