--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.19",
+    "dayjs": "^1.10.7",
     "typescript": "^4.5.4"
   }
 }
